sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:13: error: not found: value j
			if(plusPetit(j+1,j)){
                                     ^AlgCombSort:14: error: not found: value j
				echange(j,j+1)
                                        ^