sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart = getNombreValeurs()
	var i = 0
	var swap = true
	do{
		if(ecart>1){
			ecart = (ecart.toDouble / 1.3).toInt
		}
		i = 0
		swap = false
		while(i + ecart > getNombreValeurs()){
			if(plusPetit(j+1,j)){
				echange(j,j+1)
				swap = true
			}
			i += 1
		}
	}while(ecart > 1 || swap)
	
}
